@@ -460,19 +460,19 @@ Potentially influential observations of
 87  0.03     0.02      0.03      0.06    -0.02    -0.03    -0.02     0.14
 89 -0.07     0.05      0.04      0.08    -0.06     0.12     0.10     0.64
 93 -0.07     0.05      0.04      0.08    -0.06     0.12     0.10    -0.64
-   cov.r   cook.d  hat    
-8   1.71_*  0.04    0.39  
-19  2.09_*  0.00    0.43  
-28  1.86_*  0.00    0.36  
-39  1.76_*  0.01    0.36  
-42  0.13_*  0.05    0.06  
-57   NaN     Inf_*  1.00_*
-66  1.63_*  0.00    0.26  
-80  1.92_*  0.01    0.40  
-83  1.88_*  0.00    0.36  
-87  1.60_*  0.00    0.25  
-89  2.68_*  0.03    0.57_*
-93  2.68_*  0.03    0.57_*
+   cov.r   cook.d hat    
+8   1.71_*  0.04   0.39  
+19  2.09_*  0.00   0.43  
+28  1.86_*  0.00   0.36  
+39  1.76_*  0.01   0.36  
+42  0.13_*  0.05   0.06  
+57   NaN     NaN   1.00_*
+66  1.63_*  0.00   0.26  
+80  1.92_*  0.01   0.40  
+83  1.88_*  0.00   0.36  
+87  1.60_*  0.00   0.25  
+89  2.68_*  0.03   0.57_*
+93  2.68_*  0.03   0.57_*
 > ## only last two cols in row 57 should be influential
 > 
 > 
